update readMe and add comments

--- a/index.html
+++ b/index.html
@@ -1,9 +1,64 @@
-<script src="index.js"></script>
-<script>widget().register('github-widget')</script>
-<style>
-  github-widget {
-    margin: auto;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<github-widget></github-widget>
+    <script src="index.js"></script>
+    <script>widget().register('github-widget')</script>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+        font: 18px 'Raleway', sans-serif;
+      }
+      div {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        max-width: 610px;
+        margin: auto;
+        margin-top: 20px;
+      }
+      github-widget {
+        flex: 1 auto;
+        max-width: 280px;
+        margin: 10px
+      }
+      .text {
+        flex: 1 auto;
+        text-align: center;
+        max-width: 280px;
+      }
+      p {
+        margin: 10px;
+      }
+      a {
+        cursor: pointer;
+        color: #009688;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <github-widget></github-widget>
+      <div class="text">
+        <p>
+          This is an example widget, demonstrating the data-binding, event handling, animation and shadow DOM
+          capabilities of the <a href="http://www.nx-framework.com">NX framework</a>.
+        </p>
+        <p>
+           The widget's source code can be found in <a href="https://github.com/solkimicreb/nx-github-widget">this repo</a>.
+           A tutorial on how to create a widget like this can be found <a href="http://www.nx-framework.com/blog/public/github-widget/">here</a>.
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
